# composition-input-dependency-analyzer

./: CMakeLists.txt
Analysis/: BasicBlockAnalysisResult.h  CMakeLists.txt  DependencyAnaliser.cpp  FunctionAnaliser.cpp  InputDependencyAnalysisInterface.h  InputDependentFunctionAnalysisResult.h  LibraryInfoFromConfigFile.h  ModuleSizeDebugPass.cpp  Statistics.cpp
Analysis/include/input-dependency/Analysis/: CachedFunctionAnalysisResult.h  DependencyAnaliser.h  InputDependencyAnalysisPass.h  InputDependencyStatistics.h
Analysis/src/: CLibraryInfo.cpp  CachedFunctionAnalysisResult.cpp  DependencyAnaliser.cpp  InputDependencyAnalysisPass.cpp  InputDependencyStatistics.cpp  ReflectingBasicBlockAnaliser.cpp  constants.cpp
Transforms/: CMakeLists.txt  FunctionClone.h  FunctionClonePass.cpp  FunctionClonePass.h  FunctionExtraction.cpp  FunctionExtraction.h  FunctionSnippet.cpp
Transforms/src/: FunctionExtraction.cpp  FunctionSnippet.cpp
